--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.fi/citations?user=vW7JdUwAAAAJ"
-  email            : "tuomo.lehtonen@helsinki.fi"
+  email            : "tuomo.lehtonen@aalto.fi"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   dblp             : "https://dblp.org/pid/202/3153.html"
